--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest",
+    "test": "jest dist",
     "start": "node dist/index"
   },
   "repository": {
@@ -19,16 +19,16 @@
   },
   "homepage": "https://github.com/ken107/service-manager#readme",
   "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.9.2",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.2",
     "@types/tmp": "^0.2.1",
-    "@types/ws": "^7.4.7",
+    "@types/ws": "^8.2.0",
     "typescript": "^4.4.3"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
     "p-timeout": "^4.1.0",
     "tmp": "^0.2.1",
-    "ws": "^7.5.3"
+    "ws": "^8.2.2"
   }
 }
