--- a/package.json
+++ b/package.json
@@ -19,16 +19,14 @@
   },
   "homepage": "https://github.com/ken107/service-manager#readme",
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.2",
-    "@types/tmp": "^0.2.1",
-    "@types/ws": "^8.2.0",
-    "typescript": "^4.4.3"
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.3",
+    "@types/tmp": "^0.2.3",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "dotenv": "^10.0.0",
-    "p-timeout": "^4.1.0",
-    "tmp": "^0.2.1",
-    "ws": "^8.2.2"
+    "@service-broker/service-broker-client": "^1.0.0",
+    "dotenv": "^16.0.1",
+    "tmp": "^0.2.1"
   }
 }
